--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo16.png" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"/>
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CasperLabs Clarity Sign Helper</title>
+    <title>CasperLabs Signer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
